[workspace]
resolver = "2"
members = ["face", "lpv2", "ndn", "packet", "router", "tlv", "varnumber"]


[workspace.package]
version = "0.1.0"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/ndn-rs/ndn-rs"


[workspace.dependencies]
bytes = "1.5"
generic-array = "1.0"
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }

ndn-face = { path = "./face" }
ndn-lpv2 = { path = "./lpv2" }
ndn-packet = { path = "./packet" }
ndn-router = { path = "./router" }
ndn-tlv = { path = "./tlv" }
ndn-varnumber = { path = "./varnumber" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused = "warn"
warnings = "deny"
