[workspace]
resolver = "2"
members = [
    "client",
    "face",
    "lpv2",
    "management",
    "ndn",
    "nfdc",
    "router",
    "tlv",
    "tlv-core",
    "tlv-derive",
    "transport",
    "varnumber",
]


[workspace.package]
version = "0.0.3-alpha.3"
authors = ["Cyril Plisko <cyril.plisko@mountall.com>"]
edition = "2021"
license = "Apache-2.0/MIT"
repository = "https://github.com/ndn-rs/ndn-rs"
readme = "README.md"


[workspace.dependencies]
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.4", features = ["derive", "env"] }
darling = { version = "0.20", features = ["diagnostics"] }
futures = "0.3"
generic-array = { version = "1.0", features = ["alloc"] }
hashbrown = "0.14"
percent-encoding = "2.3"
proc-macro2 = "1.0"
quote = "1.0"
rand = "0.8"
slotmap = "1.0"
time = { version = "0.3", features = ["local-offset"] }
thiserror = "1.0"
tokio = { version = "1.34", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ndn = { path = "./ndn" }
ndn-client = { path = "./client" }
ndn-face = { path = "./face" }
ndn-lpv2 = { path = "./lpv2" }
ndn-management = { path = "./management" }
ndn-router = { path = "./router" }
ndn-tlv = { path = "./tlv" }
ndn-tlv-core = { path = "./tlv-core" }
ndn-tlv-derive = { path = "./tlv-derive" }
ndn-transport = { path = "./transport" }
ndn-varnumber = { path = "./varnumber" }


[workspace.lints.clippy]
use_self = "warn"
map_flatten = "warn"
map_unwrap_or = "warn"


[workspace.lints.rust]
deprecated_in_future = "warn"
future_incompatible = "warn"
noop_method_call = "warn"
unreachable_pub = "warn"
missing_debug_implementations = "warn"
rust_2018_compatibility = "warn"
rust_2021_compatibility = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
unused = "warn"
warnings = "deny"
