[package]
name = "ndn-face"
description = "Named Data Networking - Face"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
bytes.workspace = true
thiserror.workspace = true

ndn-tlv.workspace = true
ndn-packet.workspace = true


[lints]
workspace = true
