[package]
name = "ndn-lpv2"
description = "Named Data Networking - Link Protocol v2"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
bytes.workspace = true

ndn-tlv.workspace = true


[lints]
workspace = true
