[package]
name = "ndn"
description = "Named Data Networking - top level crate"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
ndn-lpv2.workspace = true
ndn-packet.workspace = true
ndn-tlv.workspace = true
ndn-varnumber.workspace = true


[lints]
workspace = true
