[package]
name = "ndn"
description = "Named Data Networking - top level crate"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
ndn-face.workspace = true
ndn-lpv2.workspace = true
ndn-management.workspace = true
ndn-packet.workspace = true
ndn-router.workspace = true
ndn-tlv.workspace = true
ndn-varnumber.workspace = true


[lints]
workspace = true
