[package]
name = "ndn-packet"
description = "Named Data Networking - Packet wrapper"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
bytes.workspace = true

ndn-tlv.workspace = true
ndn-varnumber.workspace = true


[lints]
workspace = true
