[package]
name = "ndn-router"
description = "Named Data Networking - Router"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
thiserror.workspace = true
tokio.workspace = true

ndn-tlv.workspace = true
ndn-face.workspace = true


[lints]
workspace = true
