[package]
name = "ndn-router"
description = "Named Data Networking - Router"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true


[dependencies]
bytes.workspace = true
slotmap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

ndn-tlv.workspace = true
ndn-face.workspace = true
ndn-management.workspace = true


[lints]
workspace = true
