[package]
name = "ndn-serde-tlv"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true


[dependencies]
bytes.workspace = true
serde.workspace = true
thiserror.workspace = true

ndn-varnumber.workspace = true


[lints]
workspace = true
