[package]
name = "ndn-tlv-derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
description = "Named Data Networking - Tlv derive helpers"


[lib]
proc-macro = true


[dependencies]
darling.workspace = true
proc-macro2.workspace = true
quote.workspace = true


[lints]
workspace = true
